From version 0.5.10 to 0.5.11
- pedantic fixes for strict aliasing and gcc 4.4.

From version 0.5.9 to 0.5.10
- missing man page in dist tarball.

From version 0.5.8 to 0.5.9
- remove snmp from sipwitch, will be in switchroom.
- remove swig from sipwitch, will be added where needed.

From version 0.5.7 to 0.5.8
- detect registration from ephemeral ports.
- auto-detect interfaces and local subnets.

From version 0.5.6 to 0.5.7
- ability to disable install of init.d.
- fix for redirected invite identity vs external call request.
- fix for cidr allocate size.

From version 0.5.5 to 0.5.6
- java packaging policies can be passed through configure.
- unneeded patches removed from rpm spec file.
- network identity saved in registry to make it easier to calculate nat.
- network and proxy peer now auto-detected from access policy control.
- basic rtp proxy peer detection part of core server.
- rtp media proxy will be integrated in core server, rtpproxy plugin removed.
- refer state processing for call transfers.

From verison 0.5.4 to 0.5.5
- python swig binaries now placed correctly.
- new init script has locking.  Status and condrestart added.
- new spec file for rpm builds.
- new --with-initrddir and default for /etc/rc.d/init.d.
- better python and php support for packaging.

From version 0.5.3 to 0.5.4
- some build notes.
- bugfix for setting domain identities in "from" 

From version 0.5.2 to 0.5.3
- SIP publish can be forwarded through plugins. Forward plugin publishes
  status to insecure calling domain.

From version 0.5.1 to 0.5.2
- rebuilt ack and proper in-dialog re-invite handling, now works.

From version 0.5.0 to 0.5.1
- call source referencing by request uri rather than resolved interface.
- sms instant messaging multi-nodal and remote uri support.
- cfwd busy can be used if no dnd or away forward target set.
- sip publish messages now updates internal presence status.
- simplified call forwarding detection based on presence status.
